--- a/apps/admin-portal/project.json
+++ b/apps/admin-portal/project.json
@@ -22,7 +22,8 @@
         ],
         "styles": ["apps/admin-portal/src/styles.scss"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "@nrwl/react/plugins/webpack",
+        "postcssConfig": "apps/admin-portal/postcss.config.js"
       },
       "configurations": {
         "development": {
@@ -77,6 +78,37 @@
       "options": {
         "jestConfig": "apps/admin-portal/jest.config.ts",
         "passWithNoTests": true
+      }
+    },
+    "storybook": {
+      "executor": "@nrwl/storybook:storybook",
+      "options": {
+        "uiFramework": "@storybook/react",
+        "port": 4400,
+        "config": {
+          "configFolder": "apps/admin-portal/.storybook"
+        }
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nrwl/storybook:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "uiFramework": "@storybook/react",
+        "outputPath": "dist/storybook/admin-portal",
+        "config": {
+          "configFolder": "apps/admin-portal/.storybook"
+        }
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
       }
     }
   },
