--- a/package.json
+++ b/package.json
@@ -27,14 +27,23 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.8.6",
     "@nrwl/cypress": "14.8.6",
     "@nrwl/eslint-plugin-nx": "14.8.6",
     "@nrwl/jest": "14.8.6",
     "@nrwl/linter": "14.8.6",
     "@nrwl/react": "14.8.6",
+    "@nrwl/storybook": "14.8.6",
     "@nrwl/web": "14.8.6",
     "@nrwl/workspace": "14.8.6",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
+    "@storybook/react": "~6.5.9",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -42,7 +51,9 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.12",
     "babel-jest": "28.1.1",
+    "babel-loader": "8.2.5",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -54,10 +65,13 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.8.6",
+    "postcss": "8.4.16",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.1.8",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "url-loader": "^3.0.0"
   }
 }
