--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
+    "@mui/x-data-grid": "^6.7.0",
     "@nrwl/nx-cloud": "^15.0.2",
     "@reduxjs/toolkit": "1.8.5",
     "axios": "^1.2.2",
